2011-01-05  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        <rdar://problem/8799835> hyphenate-character: auto should fall back to hyphen-minus if the primary font lacks a hyphen glyph
        https://bugs.webkit.org/show_bug.cgi?id=51915

        * platform/mac/fast/text/basic/014-expected.checksum:
        * platform/mac/fast/text/basic/014-expected.png:
        * platform/mac/fast/text/basic/014-expected.txt:
        * platform/mac/fast/text/capitalize-boundaries-expected.checksum:
        * platform/mac/fast/text/capitalize-boundaries-expected.png:
        * platform/mac/fast/text/capitalize-boundaries-expected.txt:
        * platform/mac/fast/text/midword-break-after-breakable-char-expected.checksum:
        * platform/mac/fast/text/midword-break-after-breakable-char-expected.png:
        * platform/mac/fast/text/midword-break-after-breakable-char-expected.txt:

2011-01-05  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Dirk Schulze.

        Malformed SVG causes crash in updateContainerOffset
        https://bugs.webkit.org/show_bug.cgi?id=44610

        Test case for recursive svg <use>.
        This test case passes if no crash occurs.

        * svg/custom/recursive-use-expected.txt: Added.
        * svg/custom/recursive-use.svg: Added.

2011-01-05  Antti Koivisto  <antti@apple.com>

        Not reviewed.

        Update a pixel test result for https://bugs.webkit.org/show_bug.cgi?id=8852.

        * platform/mac/fast/repaint/renderer-destruction-by-invalidateSelection-crash-expected.checksum:
        * platform/mac/fast/repaint/renderer-destruction-by-invalidateSelection-crash-expected.png:

2011-01-04  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        insecure-css-in-main-frame.html is flaky on Chromium-linux too.

        * platform/chromium/test_expectations.txt:

2011-01-04  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update
