@@ -1,3 +1,15 @@
+2011-01-05  Abhishek Arya  <inferno@chromium.org>
+
+        Reviewed by Dave Hyatt.
+
+        Do not merge anonymous blocks when one of them is the one getting removed.
+        https://bugs.webkit.org/show_bug.cgi?id=51919
+
+        Test: fast/block/merge-anonymous-block-remove-child-crash.html
+
+        * rendering/RenderBlock.cpp:
+        (WebCore::RenderBlock::removeChild):
+
 2011-01-05  Ryosuke Niwa  <rniwa@webkit.org>
 
         Reviewed by Eric Seidel.
